[package]
name = "esb"
version = "0.1.0"
edition = "2018"
description = "Implementation of Nordic's Enhanced ShockBurst communication protocol"

authors = [
    "Thales Fragoso <thales.fragosoz@gmail.com>",
    "James Munns <james.munns@ferrous-systems.com>"
]

repository = "https://github.com/thalesfragoso/esb"
documentation = "https://docs.rs/esb"
readme = "README.md"

categories = ["embedded", "no-std"]
keywords = ["arm", "cortex-m", "nrf", "radio", "communication"]
license = "MIT OR Apache-2.0"

[package.metadata.docs.rs]
features = ["52832"]
default-target = "x86_64-unknown-linux-gnu"

[dependencies]
# nrf51-pac = { version = "0.10.1", optional = true }
# nrf52810-pac = { version = "0.10.1", optional = true }
# nrf52832-pac = { version = "0.10.1", optional = true }
# nrf52833-pac = { version = "0.10.1", optional = true }
# nrf52840-pac = { version = "0.10.1", optional = true }
# log = { version = "0.4.8", optional = true }
cortex-m = "0.7.7"

[dependencies.nrf-pac]
git = "https://github.com/embassy-rs/nrf-pac"
rev = "52e3a757f06035c94291bfc42b0c03f71e4d677e"
features = ["nrf52840"]

# [dependencies.bbqueue]
# version = "0.4.10"
# default-features = false

[dependencies.bbq2]
# git = "https://github.com/jamesmunns/bbq2"
# rev = "907cc6ae9740edd240808e4d2840fe97c9eeb201"
path = "/Users/james/personal/bbq2"
default-features = false
features = ["cas-atomics", "maitake-sync-0_1", "critical-section"]

[features]
# default = ["52840"]
fast-ru = []
# 51 = ["nrf51-pac", "bbqueue/thumbv6"]
# 52810 = ["nrf52810-pac", "bbqueue/atomic"]
# 52832 = ["nrf52832-pac", "bbqueue/atomic"]
# 52833 = ["nrf52833-pac", "bbqueue/atomic"]
# 52840 = ["nrf52840-pac", "bbqueue/atomic"]

[patch.crates-io.maitake-sync]
git = "https://github.com/jamesmunns/mycelium/"
rev = "3d70f02bcc0de0e0cc0602ddc2b4aee7a34c5201"
